<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sasct.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sasct.ui.dashboard.DashboardFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sasct.ui.notifications.NotificationsFragment"
        android:label="@string/title_negotiations"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_create_offer"
        android:name="com.example.sasct.ui.createOffer.CreateOfferFragment"
        android:label="@string/title_my_offers"
        tools:layout="@layout/fragment_create_offer" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.sasct.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>